--- a/1.html
+++ b/1.html
@@ -1,28 +1,28 @@
 <!doctype html>
 <html>
 <head>
-  <title>´Ù°¡¿Ã ¹Ì·¡ - Æ÷½ºÆ®ÄÚ·Î³ª</title>
-  <meta charset="euc-kr">
+  <title>ë‹¤ê°€ì˜¬ ë¯¸ëž˜ - í¬ìŠ¤íŠ¸ì½”ë¡œë‚˜</title>
+  <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="index.html">´Ù°¡¿Ã ¹Ì·¡</a></h1>
+  <h1><a href="index.html">ë‹¤ê°€ì˜¬ ë¯¸ëž˜</a></h1>
 <ul>
   <li>1. HTML</li>
   <li>2. CSS</li>
   <li>3. JavaScript</li>
 </ul>
 <ol>
-  <li><a href="1.html">Æ÷½ºÆ®ÄÚ·Î³ª</a></li>
-  <li><a href="2.html">ÀÇ·á</a></li>
-  <li><a href="3.html">Á¾±³</a></li>
+  <li><a href="1.html">í¬ìŠ¤íŠ¸ì½”ë¡œë‚˜</a></li>
+  <li><a href="2.html">ì˜ë£Œ</a></li>
+  <li><a href="3.html">ì¢…êµ</a></li>
 </ol>
-<h2><a href="https://en.dict.naver.com/#/entry/enko/d72d71d60c01429cb4010cd6f041b80d" target="_blank" title="PostCORONA specification">Æ÷½ºÆ® ÄÚ·Î³ª</a>¶õ ¹«¾ùÀÎ°¡?</h2>
-Æ÷½ºÆ® ÄÚ·Î³ª((Post(~ÈÄ¿¡), COVID(ÄÚ·Î³ª19)ÀÇ ÇÕ¼º¾î·Î, ÄÚ·Î³ª19 °¡ Áö³ª°£ ÀÌÈÄÀÇ <strong><u>»õ·Î¿î</u> ÀÏ»ó ¹× °æÁ¦Àû, »çÈ¸Àû º¯È­ µî</strong>À» ¸»ÇÑ´Ù.
+<h2><a href="https://en.dict.naver.com/#/entry/enko/d72d71d60c01429cb4010cd6f041b80d" target="_blank" title="PostCORONA specification">í¬ìŠ¤íŠ¸ ì½”ë¡œë‚˜</a>ëž€ ë¬´ì—‡ì¸ê°€?</h2>
+í¬ìŠ¤íŠ¸ ì½”ë¡œë‚˜((Post(~í›„ì—), COVID(ì½”ë¡œë‚˜19)ì˜ í•©ì„±ì–´ë¡œ, ì½”ë¡œë‚˜19 ê°€ ì§€ë‚˜ê°„ ì´í›„ì˜ <strong><u>ìƒˆë¡œìš´</u> ì¼ìƒ ë° ê²½ì œì , ì‚¬íšŒì  ë³€í™” ë“±</strong>ì„ ë§í•œë‹¤.
 <img src="covid.jpg" width="100%">
-<br><br><br>°úÇÐ±â¼úÁ¤º¸Åë½ÅºÎ µîÀÌ Àü¹®°¡ ³íÀÇ¸¦ °ÅÃÄ ¼±Á¤ÇÑ Æ÷½ºÆ® ÄÚ·Î³ª19 ½Ã´ë¿¡ °¢±¤¹ÞÀ» 25°¡Áö À¯¸Á±â¼úÀ» ¶æÇÑ´Ù. 4´ë È¯°æº¯È­¿¡ µû¶ó Çï½ºÄÉ¾î, ±³À°, ¹°·ù, Á¦Á¶, È¯°æ, ¹®È­, Á¤º¸º¸¾È µî 8°³ ¿µ¿ª¿¡¼­ 25°³ ±â¼úÀ» ¼±Á¤Çß´Ù.
-[³×ÀÌ¹ö Áö½Ä¹é°ú] Æ÷½ºÆ® ÄÚ·Î³ª19 ½Ã´ëÀÇ À¯¸Á±â¼ú 25°¡Áö (½Ã»ç»ó½Ä»çÀü, pmg Áö½Ä¿£Áø¿¬±¸¼Ò)
-<p style="margin-top:40px;">°úÇÐ±â¼úÁ¤º¸Åë½ÅºÎ µîÀÌ Àü¹®°¡ ³íÀÇ¸¦ °ÅÃÄ ¼±Á¤ÇÑ Æ÷½ºÆ® ÄÚ·Î³ª19 ½Ã´ë¿¡ °¢±¤¹ÞÀ» 25°¡Áö À¯¸Á±â¼úÀ» ¶æÇÑ´Ù. 4´ë È¯°æº¯È­¿¡ µû¶ó Çï½ºÄÉ¾î, ±³À°, ¹°·ù, Á¦Á¶, È¯°æ, ¹®È­, Á¤º¸º¸¾È µî 8°³ ¿µ¿ª¿¡¼­ 25°³ ±â¼úÀ» ¼±Á¤Çß´Ù.
-[³×ÀÌ¹ö Áö½Ä¹é°ú] Æ÷½ºÆ® ÄÚ·Î³ª19 ½Ã´ëÀÇ À¯¸Á±â¼ú 25°¡Áö (½Ã»ç»ó½Ä»çÀü, pmg Áö½Ä¿£Áø¿¬±¸¼Ò)</p>
+<br><br><br>ê³¼í•™ê¸°ìˆ ì •ë³´í†µì‹ ë¶€ ë“±ì´ ì „ë¬¸ê°€ ë…¼ì˜ë¥¼ ê±°ì³ ì„ ì •í•œ í¬ìŠ¤íŠ¸ ì½”ë¡œë‚˜19 ì‹œëŒ€ì— ê°ê´‘ë°›ì„ 25ê°€ì§€ ìœ ë§ê¸°ìˆ ì„ ëœ»í•œë‹¤. 4ëŒ€ í™˜ê²½ë³€í™”ì— ë”°ë¼ í—¬ìŠ¤ì¼€ì–´, êµìœ¡, ë¬¼ë¥˜, ì œì¡°, í™˜ê²½, ë¬¸í™”, ì •ë³´ë³´ì•ˆ ë“± 8ê°œ ì˜ì—­ì—ì„œ 25ê°œ ê¸°ìˆ ì„ ì„ ì •í–ˆë‹¤.
+[ë„¤ì´ë²„ ì§€ì‹ë°±ê³¼] í¬ìŠ¤íŠ¸ ì½”ë¡œë‚˜19 ì‹œëŒ€ì˜ ìœ ë§ê¸°ìˆ  25ê°€ì§€ (ì‹œì‚¬ìƒì‹ì‚¬ì „, pmg ì§€ì‹ì—”ì§„ì—°êµ¬ì†Œ)
+<p style="margin-top:40px;">ê³¼í•™ê¸°ìˆ ì •ë³´í†µì‹ ë¶€ ë“±ì´ ì „ë¬¸ê°€ ë…¼ì˜ë¥¼ ê±°ì³ ì„ ì •í•œ í¬ìŠ¤íŠ¸ ì½”ë¡œë‚˜19 ì‹œëŒ€ì— ê°ê´‘ë°›ì„ 25ê°€ì§€ ìœ ë§ê¸°ìˆ ì„ ëœ»í•œë‹¤. 4ëŒ€ í™˜ê²½ë³€í™”ì— ë”°ë¼ í—¬ìŠ¤ì¼€ì–´, êµìœ¡, ë¬¼ë¥˜, ì œì¡°, í™˜ê²½, ë¬¸í™”, ì •ë³´ë³´ì•ˆ ë“± 8ê°œ ì˜ì—­ì—ì„œ 25ê°œ ê¸°ìˆ ì„ ì„ ì •í–ˆë‹¤.
+[ë„¤ì´ë²„ ì§€ì‹ë°±ê³¼] í¬ìŠ¤íŠ¸ ì½”ë¡œë‚˜19 ì‹œëŒ€ì˜ ìœ ë§ê¸°ìˆ  25ê°€ì§€ (ì‹œì‚¬ìƒì‹ì‚¬ì „, pmg ì§€ì‹ì—”ì§„ì—°êµ¬ì†Œ)</p>
 <table>
   <tr>
     <td>head</td>
