--- a/1.html
+++ b/1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>다가올 미래 - 포스트코로나</title>
-  <meta charset="utf-8">
+  <meta charset="euc-kr">
 </head>
 <body>
   <h1><a href="index.html">다가올 미래</a></h1>
